--- a/docs/posts/10wk-2-lecture.out.ipynb
+++ b/docs/posts/10wk-2-lecture.out.ipynb
@@ -13,7 +13,7 @@
         "\n",
         "# 1. 강의영상"
       ],
-      "id": "94914837-9250-4bcb-a125-01ef3f84bea4"
+      "id": "4cc5a33b-3057-4967-9c9d-a720fd3632df"
     },
     {
       "cell_type": "code",
@@ -33,11 +33,11 @@
       "source": [
         "# 2. Imports"
       ],
-      "id": "0ccbeb69-62f3-4208-96e1-0b42a4e3cf78"
+      "id": "b1daad86-c192-4267-87d1-86aa5f5cfc49"
     },
     {
       "cell_type": "code",
-      "execution_count": 44,
+      "execution_count": 83,
       "metadata": {
         "tags": []
       },
@@ -58,11 +58,11 @@
         "\n",
         "`-` 주어진 자료가 아래와 같다고 하자."
       ],
-      "id": "3f1c0642-ba0c-42c2-8ea6-a92fe5d68b20"
+      "id": "a2e5ef73-66f5-44ce-9cf5-6a016899c12a"
     },
     {
       "cell_type": "code",
-      "execution_count": 45,
+      "execution_count": 84,
       "metadata": {
         "tags": []
       },
@@ -80,7 +80,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 46,
+      "execution_count": 85,
       "metadata": {
         "tags": []
       },
@@ -104,11 +104,11 @@
       "source": [
         "`-` 문제1: 아래와 같이 최초의 직선을 생성하였다."
       ],
-      "id": "a4ca9c7b-7608-43b2-8baf-5d0f9d25618b"
+      "id": "33f66d9d-6187-4b0c-92fb-cfc4581ffd49"
     },
     {
       "cell_type": "code",
-      "execution_count": 47,
+      "execution_count": 86,
       "metadata": {
         "tags": []
       },
@@ -120,7 +120,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 48,
+      "execution_count": 87,
       "metadata": {
         "tags": []
       },
@@ -148,11 +148,11 @@
         "\n",
         "`-` 문제2: 아래와 같이 최초의 직선을 생성하였다."
       ],
-      "id": "e1f2390a-b862-4236-b3f1-b1995d2259b4"
+      "id": "635bedf1-90af-406a-b322-de04a8085e69"
     },
     {
       "cell_type": "code",
-      "execution_count": 49,
+      "execution_count": 90,
       "metadata": {
         "tags": []
       },
@@ -165,7 +165,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 50,
+      "execution_count": 91,
       "metadata": {
         "tags": []
       },
@@ -199,11 +199,11 @@
         "\n",
         "`-` Data"
       ],
-      "id": "ab9dd7ad-285c-4c29-99f9-fd3e6aa850d5"
+      "id": "9da95f79-eaea-4c18-822b-38b7cd98d4d3"
     },
     {
       "cell_type": "code",
-      "execution_count": 51,
+      "execution_count": 95,
       "metadata": {
         "tags": []
       },
@@ -250,82 +250,19 @@
         "\n",
         "**(1)** 옥순(IN)과 영식(IN)의 궁합 $\\approx$\n",
         "옥순의I성향$\\times$영식의I성향 $+$ 옥순의N성향$\\times$영식의N성향 $+$\n",
-        "옥순의매력 $+$ 영식의매력"
-      ],
-      "id": "7148eee0-fa93-4da2-add3-c5a0c4ccad70"
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 52,
-      "metadata": {
-        "tags": []
-      },
-      "outputs": [],
-      "source": [
-        "옥순성향 = torch.tensor([0.90,0.65]).reshape(2,1) \n",
-        "옥순매력 = torch.tensor([1.01]).reshape(1,1)\n",
-        "영식성향 = torch.tensor([0.95,0.62]).reshape(2,1) \n",
-        "영식매력 = torch.tensor([1.00]).reshape(1,1)"
-      ],
-      "id": "96e2b6fb-9dea-432e-bd1a-3ee34975a5ff"
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
+        "옥순의매력 $+$ 영식의매력\n",
+        "\n",
         "**(2)** 영자(IN)와 다호(ES)의 궁합 $\\approx$ 영자I성향$\\times$다호I성향\n",
-        "$+$ 영자N성향$\\times$다호의N성향 $+$ 영자의매력 $+$ 다호의매력"
-      ],
-      "id": "acede87e-45fa-4465-88a2-56fd67fdcd0d"
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 53,
-      "metadata": {
-        "tags": []
-      },
-      "outputs": [],
-      "source": [
-        "영자성향 = torch.tensor([1.00,0.70]).reshape(2,1) \n",
-        "영자매력 = torch.tensor([0.95]).reshape(1,1)\n",
-        "다호성향 = torch.tensor([-1.00,-0.82]).reshape(2,1) \n",
-        "다호매력 = torch.tensor([1.05]).reshape(1,1)"
-      ],
-      "id": "5d7b2b4e-f216-4717-8b38-4815faefa8e4"
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
+        "$+$ 영자N성향$\\times$다호의N성향 $+$ 영자의매력 $+$ 다호의매력\n",
+        "\n",
         "**(3)** 하니(I)와 영호(IS)의 궁합 $\\approx$ 하니I성향$\\times$영호I성향\n",
-        "$+$ 하니N성향$\\times$영호의N성향 $+$ 하니의매력 $+$ 영호의매력"
-      ],
-      "id": "86bbb122-3ef5-4d48-a350-c059ccb48625"
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 54,
-      "metadata": {
-        "tags": []
-      },
-      "outputs": [],
-      "source": [
-        "하니성향 = torch.tensor([1.00,0.00]).reshape(2,1) \n",
-        "하니매력 = torch.tensor([3.00]).reshape(1,1)\n",
-        "영호성향 = torch.tensor([0.98,-0.70]).reshape(2,1) \n",
-        "영호매력 = torch.tensor([0.95]).reshape(1,1)"
-      ],
-      "id": "bb540bcb-f518-463f-a47d-29d4d3e70e63"
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
+        "$+$ 하니N성향$\\times$영호의N성향 $+$ 하니의매력 $+$ 영호의매력\n",
+        "\n",
         "> 전체적으로 그럴싸함\n",
         "\n",
         "`-` 전체 사용자의 설정값"
       ],
-      "id": "65a85fcf-2ea0-41e8-aacf-56ee06c68459"
+      "id": "5a3e2173-86e5-49d6-8c06-8ccea93a13cd"
     },
     {
       "cell_type": "code",
@@ -378,7 +315,7 @@
       "source": [
         "`-` 아래의 행렬곱 관찰"
       ],
-      "id": "ce4c26c1-df8f-41d1-b508-6d19100a8750"
+      "id": "f11928e7-551b-4d85-a976-80afeda13125"
     },
     {
       "cell_type": "code",
@@ -493,7 +430,7 @@
         "\n",
         "[6] 1.21+1.11 = 2.32"
       ],
-      "id": "d926a158-73e3-48d1-bf12-8c1430facc5d"
+      "id": "9c58560f-4c0e-4c1f-b26e-647086a376f0"
     },
     {
       "cell_type": "code",
@@ -514,7 +451,7 @@
       "source": [
         "`-` 이름을 숫자화"
       ],
-      "id": "0371fab2-8545-4416-ba89-cd7841911979"
+      "id": "5c015bdd-1bd5-491c-abd4-bb644151dddf"
     },
     {
       "cell_type": "code",
@@ -564,67 +501,37 @@
         "\n",
         "## E. 코드정리"
       ],
-      "id": "b7de9c8f-0d6f-4c85-8bfa-fa2c353c8697"
+      "id": "e9b6736a-ce2b-4a50-bb70-f0a58ba2f0e3"
     },
     {
       "cell_type": "code",
-      "execution_count": 59,
+      "execution_count": 65,
       "metadata": {
         "tags": []
       },
       "outputs": [],
       "source": [
         "df_view = pd.read_csv('https://raw.githubusercontent.com/guebin/DL2024/main/posts/solo.csv',index_col=0)\n",
-        "df = df_view.stack().reset_index().set_axis(['W','M','y'],axis=1)\n",
+        "df_train = df_view.stack().reset_index().set_axis(['W','M','y'],axis=1)\n",
         "w = {'옥순(IN)':0, '영자(IN)':1, '정숙(IS)':2, '영숙(IS)':3, '순자(EN)':4, '현숙(EN)':5, '서연(ES)':6, '보람(ES)':7, '하니(I)':8}\n",
         "m = {'영식(IN)':0, '영철(IN)':1, '영호(IS)':2, '광수(IS)':3, '상철(EN)':4, '영수(EN)':5, '규빈(ES)':6, '다호(ES)':7}\n",
-        "X1 = torch.tensor(df['W'].map(w)) # length-n vector \n",
-        "X2 = torch.tensor(df['M'].map(m)) # length-n vector \n",
+        "X1 = torch.tensor(df_train['W'].map(w)) # length-n vector \n",
+        "X2 = torch.tensor(df_train['M'].map(m)) # length-n vector \n",
         "E1 = torch.nn.functional.one_hot(X1).float()\n",
         "E2 = torch.nn.functional.one_hot(X2).float()\n",
-        "y = torch.tensor(df['y']).float().reshape(-1,1)\n",
-        "#--#\n",
-        "torch.manual_seed(0)\n",
-        "l1 = torch.nn.Linear(in_features=9,out_features=2,bias=False)\n",
-        "b1 = torch.nn.Linear(in_features=9,out_features=1,bias=False)\n",
-        "l2 = torch.nn.Linear(in_features=8,out_features=2,bias=False)\n",
-        "b2 = torch.nn.Linear(in_features=8,out_features=1,bias=False)\n",
-        "sig = torch.nn.Sigmoid()\n",
-        "loss_fn = torch.nn.MSELoss()\n",
-        "optimizr = torch.optim.Adam(\n",
-        "    list(l1.parameters())+list(l2.parameters())+list(b1.parameters())+list(b2.parameters()),\n",
-        "    lr=0.1\n",
-        ")\n",
-        "#--#\n",
-        "for epoc in range(100):\n",
-        "    ## step1 \n",
-        "    W_features = l1(E1) \n",
-        "    W_bias = b1(E1)\n",
-        "    M_features = l2(E2) \n",
-        "    M_bias = b2(E2)\n",
-        "    dot = (W_features * M_features).sum(axis=1).reshppe\n",
-        "    yhat = sig(dot).reshape(-1,1) * 5\n",
-        "    ## step2 \n",
-        "    loss = loss_fn(yhat,y)\n",
-        "    ## step3 \n",
-        "    loss.backward()\n",
-        "    ## step4 \n",
-        "    optimizr.step()\n",
-        "    optimizr.zero_grad()"
+        "y = torch.tensor(df_train['y']).float().reshape(-1,1)"
       ],
       "id": "34694bd1-fc74-4927-806c-23fdc931cb7b"
     },
     {
       "cell_type": "code",
-      "execution_count": 60,
-      "metadata": {
-        "tags": []
-      },
+      "execution_count": null,
+      "metadata": {},
       "outputs": [],
       "source": [
-        "pd.concat([df_train['y'], pd.DataFrame(yhat.data, columns=['yhat'])],axis=1)"
+        "df_view"
       ],
-      "id": "f9172ac3-1a80-4bb9-9679-c0085412905b"
+      "id": "d372224c"
     },
     {
       "cell_type": "markdown",
@@ -632,7 +539,7 @@
       "source": [
         "## F. 모형의 해석"
       ],
-      "id": "bba0e850-eaaa-4bbb-860f-7fec319cd5be"
+      "id": "fdfb30bd-7500-4564-b475-596f72b08fba"
     }
   ],
   "nbformat": 4,
