--- a/docs/posts/10wk-2.out.ipynb
+++ b/docs/posts/10wk-2.out.ipynb
@@ -13,7 +13,7 @@
         "\n",
         "# 1. 강의영상"
       ],
-      "id": "b55b8561-6c48-48b2-b365-b3dc19862d54"
+      "id": "6dacc1fd-11c1-40f4-b1d9-167080f4c5fc"
     },
     {
       "cell_type": "code",
@@ -33,7 +33,7 @@
       "source": [
         "# 2. Imports"
       ],
-      "id": "4f4102b7-ae6d-4d6b-a3df-77363ea2c803"
+      "id": "ffbbf520-7d63-46b1-8b7c-0420226027fd"
     },
     {
       "cell_type": "code",
@@ -57,7 +57,7 @@
         "\n",
         "`-` 주어진 자료가 아래와 같다고 하자."
       ],
-      "id": "b842b67d-15fb-4249-9ba6-54812525a186"
+      "id": "7b0199ee-32c1-4eae-919d-b75819c0a1cd"
     },
     {
       "cell_type": "code",
@@ -103,7 +103,7 @@
       "source": [
         "`-` 문제1: 아래와 같이 최초의 직선을 생성하였다."
       ],
-      "id": "bea0faf0-d029-46ff-911c-b9e04743d654"
+      "id": "1da7621d-9327-4639-a62f-f686cc5f85c3"
     },
     {
       "cell_type": "code",
@@ -145,7 +145,7 @@
         "`torch.optim.SGD`를 이용하여 What을 update하라. 학습률은 0.1로 설정하고\n",
         "30회 update하라."
       ],
-      "id": "55283501-51be-4c79-a8af-44a3f7bd1aed"
+      "id": "45404d23-8ddf-4f1d-ad95-3e3a30dbf989"
     },
     {
       "cell_type": "code",
@@ -199,7 +199,7 @@
       "source": [
         "`-` 문제2: 아래와 같이 최초의 직선을 생성하였다."
       ],
-      "id": "be06ff58-d0e4-4268-bd3e-a462794aa83f"
+      "id": "ea0b1413-8cc0-4a24-aec6-c0d87e193223"
     },
     {
       "cell_type": "code",
@@ -242,7 +242,7 @@
         "`torch.optim.SGD`를 이용하여 What을 update하라. 학습률은 0.1로 설정하고\n",
         "30회 update하라."
       ],
-      "id": "1b0a188f-5009-4f84-bf13-f2801ee10525"
+      "id": "a1799c92-dea3-4fc1-8a32-20ef1679acc8"
     },
     {
       "cell_type": "code",
@@ -302,7 +302,7 @@
         "\n",
         "`-` Data"
       ],
-      "id": "604ead8d-9c9b-4dd9-8c3b-4cdfde1b4c43"
+      "id": "55b3a1d5-0ddf-45f8-8657-23aea5e69bb8"
     },
     {
       "cell_type": "code",
@@ -355,22 +355,22 @@
         "옥순의I성향$\\times$영식의I성향 $+$ 옥순의N성향$\\times$영식의N성향 $+$\n",
         "옥순의매력 $+$ 영식의매력"
       ],
-      "id": "cece2ed9-147a-4736-8c21-b0be8a7f733f"
+      "id": "15faac5c-6948-4ad0-a43e-b1a35f275f09"
     },
     {
       "cell_type": "code",
-      "execution_count": 575,
+      "execution_count": 1107,
       "metadata": {
         "tags": []
       },
       "outputs": [],
       "source": [
-        "옥순성향 = torch.tensor([0.90,0.65]).reshape(2,1) \n",
-        "옥순매력 = torch.tensor([1.01]).reshape(1,1)\n",
-        "영식성향 = torch.tensor([0.95,0.62]).reshape(2,1) \n",
-        "영식매력 = torch.tensor([1.00]).reshape(1,1)\n",
+        "옥순성향 = torch.tensor([1.22,0.49]).reshape(1,2)\n",
+        "옥순매력 = torch.tensor(1.21)\n",
+        "영식성향 = torch.tensor([1.20,0.5]).reshape(1,2)\n",
+        "영식매력 = torch.tensor(1.2)\n",
         "((옥순성향*영식성향).sum() + 옥순매력 + 영식매력) # 옥순과 영식의 궁합: a ∘ b 로 내적구함 + 이후에 매력을 더함 \n",
-        "(옥순성향.T @ 영식성향 + 옥순매력 + 영식매력) # 옥순과 영식의 궁합: a.T @ b 로 내적구함 + 이후에 매력을 더함"
+        "(옥순성향 @ 영식성향.T + 옥순매력 + 영식매력) # 옥순과 영식의 궁합: a.T @ b 로 내적구함 + 이후에 매력을 더함"
       ],
       "id": "96e2b6fb-9dea-432e-bd1a-3ee34975a5ff"
     },
@@ -381,48 +381,24 @@
         "**(2)** 영자(IN)와 다호(ES)의 궁합 $\\approx$ 영자I성향$\\times$다호I성향\n",
         "$+$ 영자N성향$\\times$다호의N성향 $+$ 영자의매력 $+$ 다호의매력"
       ],
-      "id": "b5f268ec-0599-414f-8360-13fd9ad7e4a8"
+      "id": "c681bdc3-1484-48cf-9a7a-946e5b87a413"
     },
     {
       "cell_type": "code",
-      "execution_count": 579,
+      "execution_count": 1109,
       "metadata": {
         "tags": []
       },
       "outputs": [],
       "source": [
-        "영자성향 = torch.tensor([1.00,0.70]).reshape(2,1) \n",
-        "영자매력 = torch.tensor([0.95]).reshape(1,1)\n",
-        "다호성향 = torch.tensor([-1.00,-0.82]).reshape(2,1) \n",
-        "다호매력 = torch.tensor([1.05]).reshape(1,1)\n",
+        "영자성향 = torch.tensor([1.17,0.44]).reshape(1,2)\n",
+        "영자매력 = torch.tensor(1.25).reshape(1,1)\n",
+        "다호성향 = torch.tensor([-1.22,-0.6]).reshape(1,2)\n",
+        "다호매력 = torch.tensor(1.15).reshape(1,1)\n",
         "((영자성향*다호성향).sum() + 영자성향 + 다호성향)\n",
-        "(영자성향.T @ 다호성향 + 영자매력 + 다호매력)"
+        "(영자성향 @ 다호성향.T + 영자매력 + 다호매력)"
       ],
       "id": "5d7b2b4e-f216-4717-8b38-4815faefa8e4"
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 593,
-      "metadata": {
-        "tags": []
-      },
-      "outputs": [],
-      "source": [
-        "1.5*1.5 + 0.7*0.7 + 2"
-      ],
-      "id": "83b5c8b7-e36e-4151-ab74-a253b1e3dafc"
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 611,
-      "metadata": {
-        "tags": []
-      },
-      "outputs": [],
-      "source": [
-        "-1.4*1.4 - 0.65*0.65 + 2"
-      ],
-      "id": "2230eff7-a145-4161-9731-42a2e2b48101"
     },
     {
       "cell_type": "markdown",
@@ -431,22 +407,22 @@
         "**(3)** 하니(I)와 영호(IS)의 궁합 $\\approx$ 하니I성향$\\times$영호I성향\n",
         "$+$ 하니N성향$\\times$영호의N성향 $+$ 하니의매력 $+$ 영호의매력"
       ],
-      "id": "9ccba5c8-631b-4d9c-9587-4181391fb1ee"
+      "id": "d5069894-b7a2-4822-aed7-2266eb3bf495"
     },
     {
       "cell_type": "code",
-      "execution_count": 557,
+      "execution_count": 1110,
       "metadata": {
         "tags": []
       },
       "outputs": [],
       "source": [
-        "하니성향 = torch.tensor([1.00,0.00]).reshape(2,1) \n",
-        "하니매력 = torch.tensor([3.00]).reshape(1,1)\n",
-        "영호성향 = torch.tensor([0.98,-0.70]).reshape(2,1) \n",
-        "영호매력 = torch.tensor([0.95]).reshape(1,1)\n",
+        "하니성향 = torch.tensor([0.2,0]).reshape(1,2)\n",
+        "하니매력 = torch.tensor(3.6)\n",
+        "영호성향 = torch.tensor([1.23,-0.7]).reshape(1,2)\n",
+        "영호매력 = torch.tensor(1.11)\n",
         "((하니성향*영호성향).sum() + 하니매력 + 영호매력)\n",
-        "(하니성향.T @ 영호성향 + 하니매력 + 영호매력)"
+        "(하니성향 @ 영호성향.T + 하니매력 + 영호매력)"
       ],
       "id": "bb540bcb-f518-463f-a47d-29d4d3e70e63"
     },
@@ -458,11 +434,11 @@
         "\n",
         "`-` 전체 사용자의 설정값"
       ],
-      "id": "304d1650-2456-4ae4-b776-9277f3ff89d2"
+      "id": "a03936cf-7746-48e2-bd7d-a9c405295101"
     },
     {
       "cell_type": "code",
-      "execution_count": 835,
+      "execution_count": 1111,
       "metadata": {
         "tags": []
       },
@@ -485,7 +461,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 882,
+      "execution_count": 1112,
       "metadata": {
         "tags": []
       },
@@ -511,11 +487,11 @@
       "source": [
         "`-` 아래의 행렬곱 관찰"
       ],
-      "id": "a857da6b-dc6b-409e-bfe7-3d0d333ce6c5"
+      "id": "64012546-ec45-4052-82a2-c03ec621f663"
     },
     {
       "cell_type": "code",
-      "execution_count": 849,
+      "execution_count": 1113,
       "metadata": {
         "tags": []
       },
@@ -556,7 +532,7 @@
         "\n",
         "`-` 주어진 자료와 우리가 임의로 만든 궁합매트릭스를 비교해보자."
       ],
-      "id": "f7c9cd9c-19d2-45aa-a144-6de676744b55"
+      "id": "170e3bb0-224e-4003-b613-799e35f6dd62"
     },
     {
       "cell_type": "code",
@@ -672,7 +648,7 @@
         "\n",
         "[6] 1.21+1.11 = 2.32"
       ],
-      "id": "ee408103-5600-4c77-8617-6afc0f9d0d85"
+      "id": "6db926a3-a72c-4927-9898-c98f5c39de9d"
     },
     {
       "cell_type": "code",
@@ -693,7 +669,7 @@
       "source": [
         "`-` 이름을 숫자화"
       ],
-      "id": "cae79dd3-e05b-4d9f-9743-ed1b0acf0a8d"
+      "id": "926c7945-eb7c-43bf-9118-1660529f971f"
     },
     {
       "cell_type": "code",
@@ -728,7 +704,7 @@
       "source": [
         "`-` 텐서화 + one_hot-인코딩"
       ],
-      "id": "46014d33-e05b-4165-9905-095a9fceadff"
+      "id": "f920dabb-3455-474d-b8e0-4d24e06085ab"
     },
     {
       "cell_type": "code",
@@ -829,7 +805,7 @@
         "`-` `X1` -\\> `여성특징`, `X1` -\\> `여성bias`, `X2` -\\> `남성특징`, `X2`\n",
         "-\\> `남성bias` 구현"
       ],
-      "id": "2e051ded-f1a7-4c9b-9c2d-0854adb110fc"
+      "id": "08bcd021-4d1e-48b8-978e-bc9ea8702b32"
     },
     {
       "cell_type": "code",
@@ -872,7 +848,7 @@
         "\n",
         "`-` step1: yhat을 구하자."
       ],
-      "id": "a47cd929-4b30-4b63-a5b0-218010f4ab40"
+      "id": "038aa5ee-6dac-41a3-8f10-677fbf6944f2"
     },
     {
       "cell_type": "code",
@@ -895,7 +871,7 @@
       "source": [
         "`-` step2: 손실계산"
       ],
-      "id": "3bf3de14-bba9-4a39-9fb5-758207e48446"
+      "id": "a2d7a9a0-4f05-4e7d-aba9-d2ad8e11c982"
     },
     {
       "cell_type": "code",
@@ -916,7 +892,7 @@
       "source": [
         "`-` step3: 미분"
       ],
-      "id": "6540fa44-b570-4025-be04-59f36990c4af"
+      "id": "53e2b70d-a910-4923-921b-0878d04e54bf"
     },
     {
       "cell_type": "code",
@@ -984,7 +960,7 @@
       "source": [
         "`-` step4: update"
       ],
-      "id": "3bc2daec-141a-4733-9482-1040b69ee0da"
+      "id": "76cec789-efdc-4b70-a8e9-2132c960c77f"
     },
     {
       "cell_type": "code",
@@ -1066,25 +1042,25 @@
       "source": [
         "## E. 코드정리"
       ],
-      "id": "92bc14cd-b7c3-468e-9540-4a5b040e172f"
+      "id": "b13bc69c-b8cb-428e-874f-cf9c30457667"
     },
     {
       "cell_type": "code",
-      "execution_count": 1095,
+      "execution_count": 1099,
       "metadata": {
         "tags": []
       },
       "outputs": [],
       "source": [
         "df_view = pd.read_csv('https://raw.githubusercontent.com/guebin/DL2024/main/posts/solo.csv',index_col=0)\n",
-        "df = df_view.stack().reset_index().set_axis(['W','M','y'],axis=1)\n",
+        "df_train = df_view.stack().reset_index().set_axis(['W','M','y'],axis=1)\n",
         "w = {'옥순(IN)':0, '영자(IN)':1, '정숙(IS)':2, '영숙(IS)':3, '순자(EN)':4, '현숙(EN)':5, '서연(ES)':6, '보람(ES)':7, '하니(I)':8}\n",
         "m = {'영식(IN)':0, '영철(IN)':1, '영호(IS)':2, '광수(IS)':3, '상철(EN)':4, '영수(EN)':5, '규빈(ES)':6, '다호(ES)':7}\n",
-        "X1 = torch.tensor(df['W'].map(w)) # length-n vector \n",
-        "X2 = torch.tensor(df['M'].map(m)) # length-n vector \n",
+        "X1 = torch.tensor(df_train['W'].map(w)) # length-n vector \n",
+        "X2 = torch.tensor(df_train['M'].map(m)) # length-n vector \n",
         "E1 = torch.nn.functional.one_hot(X1).float()\n",
         "E2 = torch.nn.functional.one_hot(X2).float()\n",
-        "y = torch.tensor(df['y']).float().reshape(-1,1)\n",
+        "y = torch.tensor(df_train['y']).float().reshape(-1,1)\n",
         "#--#\n",
         "torch.manual_seed(43052)\n",
         "l1 = torch.nn.Linear(in_features=9,out_features=2,bias=False)\n",
@@ -1116,7 +1092,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1096,
+      "execution_count": 1100,
       "metadata": {
         "tags": []
       },
@@ -1132,11 +1108,11 @@
       "source": [
         "## F. 모형의 해석"
       ],
-      "id": "8c39dd8b-62ad-49dc-ac8b-0d6cd50e158d"
+      "id": "9448e985-4ae9-40c2-bcd8-2187764eeaf1"
     },
     {
       "cell_type": "code",
-      "execution_count": 1097,
+      "execution_count": 1101,
       "metadata": {
         "tags": []
       },
@@ -1151,7 +1127,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1098,
+      "execution_count": 1102,
       "metadata": {
         "tags": []
       },
