--- a/docs/posts/10wk-2.out.ipynb
+++ b/docs/posts/10wk-2.out.ipynb
@@ -13,7 +13,7 @@
         "\n",
         "# 1. 강의영상"
       ],
-      "id": "6dacc1fd-11c1-40f4-b1d9-167080f4c5fc"
+      "id": "5b9678f0-26cf-47bb-a374-0a622a6c9ac5"
     },
     {
       "cell_type": "code",
@@ -33,7 +33,7 @@
       "source": [
         "# 2. Imports"
       ],
-      "id": "ffbbf520-7d63-46b1-8b7c-0420226027fd"
+      "id": "ba49999e-bd14-4413-8df2-d86e4aef7d2d"
     },
     {
       "cell_type": "code",
@@ -57,7 +57,7 @@
         "\n",
         "`-` 주어진 자료가 아래와 같다고 하자."
       ],
-      "id": "7b0199ee-32c1-4eae-919d-b75819c0a1cd"
+      "id": "103112ba-2e80-4f28-8110-452584830ea6"
     },
     {
       "cell_type": "code",
@@ -103,7 +103,7 @@
       "source": [
         "`-` 문제1: 아래와 같이 최초의 직선을 생성하였다."
       ],
-      "id": "1da7621d-9327-4639-a62f-f686cc5f85c3"
+      "id": "5d500971-76b7-419d-96e6-8e0d6c3b177f"
     },
     {
       "cell_type": "code",
@@ -145,7 +145,7 @@
         "`torch.optim.SGD`를 이용하여 What을 update하라. 학습률은 0.1로 설정하고\n",
         "30회 update하라."
       ],
-      "id": "45404d23-8ddf-4f1d-ad95-3e3a30dbf989"
+      "id": "b9b1314c-5d2d-435c-ad80-f1d4e46b036e"
     },
     {
       "cell_type": "code",
@@ -199,7 +199,7 @@
       "source": [
         "`-` 문제2: 아래와 같이 최초의 직선을 생성하였다."
       ],
-      "id": "ea0b1413-8cc0-4a24-aec6-c0d87e193223"
+      "id": "5dcbfb22-bf66-4a0c-9344-dcf11bacb86d"
     },
     {
       "cell_type": "code",
@@ -242,7 +242,7 @@
         "`torch.optim.SGD`를 이용하여 What을 update하라. 학습률은 0.1로 설정하고\n",
         "30회 update하라."
       ],
-      "id": "a1799c92-dea3-4fc1-8a32-20ef1679acc8"
+      "id": "95325aab-7208-494d-957a-1e04ea2e20f0"
     },
     {
       "cell_type": "code",
@@ -302,7 +302,7 @@
         "\n",
         "`-` Data"
       ],
-      "id": "55b3a1d5-0ddf-45f8-8657-23aea5e69bb8"
+      "id": "3836f71b-e5b9-41e2-95ae-2fad451dafe8"
     },
     {
       "cell_type": "code",
@@ -355,7 +355,7 @@
         "옥순의I성향$\\times$영식의I성향 $+$ 옥순의N성향$\\times$영식의N성향 $+$\n",
         "옥순의매력 $+$ 영식의매력"
       ],
-      "id": "15faac5c-6948-4ad0-a43e-b1a35f275f09"
+      "id": "76eb631f-914b-4993-9045-638a09328f16"
     },
     {
       "cell_type": "code",
@@ -381,7 +381,7 @@
         "**(2)** 영자(IN)와 다호(ES)의 궁합 $\\approx$ 영자I성향$\\times$다호I성향\n",
         "$+$ 영자N성향$\\times$다호의N성향 $+$ 영자의매력 $+$ 다호의매력"
       ],
-      "id": "c681bdc3-1484-48cf-9a7a-946e5b87a413"
+      "id": "e105ae39-85d4-4c3c-8a8a-ce64b86a190a"
     },
     {
       "cell_type": "code",
@@ -407,7 +407,7 @@
         "**(3)** 하니(I)와 영호(IS)의 궁합 $\\approx$ 하니I성향$\\times$영호I성향\n",
         "$+$ 하니N성향$\\times$영호의N성향 $+$ 하니의매력 $+$ 영호의매력"
       ],
-      "id": "d5069894-b7a2-4822-aed7-2266eb3bf495"
+      "id": "3fc23523-de4c-4e9f-8d30-49cfeafb9461"
     },
     {
       "cell_type": "code",
@@ -434,7 +434,7 @@
         "\n",
         "`-` 전체 사용자의 설정값"
       ],
-      "id": "a03936cf-7746-48e2-bd7d-a9c405295101"
+      "id": "24af879c-f4be-4209-bf01-ff57f369b0cb"
     },
     {
       "cell_type": "code",
@@ -487,7 +487,7 @@
       "source": [
         "`-` 아래의 행렬곱 관찰"
       ],
-      "id": "64012546-ec45-4052-82a2-c03ec621f663"
+      "id": "9cacfa07-5097-4ce1-b404-f9962d92ef90"
     },
     {
       "cell_type": "code",
@@ -532,7 +532,7 @@
         "\n",
         "`-` 주어진 자료와 우리가 임의로 만든 궁합매트릭스를 비교해보자."
       ],
-      "id": "170e3bb0-224e-4003-b613-799e35f6dd62"
+      "id": "7db5bb24-2078-4bfe-a998-87488a09fa1c"
     },
     {
       "cell_type": "code",
@@ -604,7 +604,9 @@
         "    아님. 당장에 남성의 바이어스에 일괄적으로 -2를 넣고 여성의\n",
         "    바이어스에 일괄적으로 +2를 해도 성립함.\n",
         "\n",
-        "`-` (걱정은 뒤로 하고) `yhat` $\\approx$ `y` 를 만족하도록 해보자!\n",
+        "`-` (걱정은 뒤로 하고) `yhat` $\\approx$ `y` 를 만족하도록 해보자! (1)\n",
+        "아무 `yhat` 을 구한다. (2) `yhat`과 `y`가 비슷한 정도를 측정한다. (3) 더\n",
+        "적당한 `yhat`값을 update한다.\n",
         "\n",
         "-   `yhat`은 어떻게 구하지? (여성특징$\\otimes$남성특징).sum() + bias?\n",
         "-   그럼 여성특징,남성특징,여성bias(=여성매력),남성bias(=남성매력)는\n",
@@ -648,7 +650,7 @@
         "\n",
         "[6] 1.21+1.11 = 2.32"
       ],
-      "id": "6db926a3-a72c-4927-9898-c98f5c39de9d"
+      "id": "7d0ab707-e61d-4b25-8d46-4e68c1c38406"
     },
     {
       "cell_type": "code",
@@ -669,7 +671,7 @@
       "source": [
         "`-` 이름을 숫자화"
       ],
-      "id": "926c7945-eb7c-43bf-9118-1660529f971f"
+      "id": "a8d6026e-6d4e-4f80-a647-0c78b1aeb303"
     },
     {
       "cell_type": "code",
@@ -704,7 +706,7 @@
       "source": [
         "`-` 텐서화 + one_hot-인코딩"
       ],
-      "id": "f920dabb-3455-474d-b8e0-4d24e06085ab"
+      "id": "ccfd1f7d-b58c-4f39-b16f-288362d2ee3e"
     },
     {
       "cell_type": "code",
@@ -805,7 +807,7 @@
         "`-` `X1` -\\> `여성특징`, `X1` -\\> `여성bias`, `X2` -\\> `남성특징`, `X2`\n",
         "-\\> `남성bias` 구현"
       ],
-      "id": "08bcd021-4d1e-48b8-978e-bc9ea8702b32"
+      "id": "f035d474-ed2a-4602-bfc9-bb7a519861c0"
     },
     {
       "cell_type": "code",
@@ -848,7 +850,7 @@
         "\n",
         "`-` step1: yhat을 구하자."
       ],
-      "id": "038aa5ee-6dac-41a3-8f10-677fbf6944f2"
+      "id": "ccb196be-0197-435a-966d-113797fcc00c"
     },
     {
       "cell_type": "code",
@@ -871,7 +873,7 @@
       "source": [
         "`-` step2: 손실계산"
       ],
-      "id": "a2d7a9a0-4f05-4e7d-aba9-d2ad8e11c982"
+      "id": "59ab1d3c-5fdc-4517-b66a-34548fa03892"
     },
     {
       "cell_type": "code",
@@ -892,7 +894,7 @@
       "source": [
         "`-` step3: 미분"
       ],
-      "id": "53e2b70d-a910-4923-921b-0878d04e54bf"
+      "id": "66682a2b-76fc-40c8-951f-3583f8241f54"
     },
     {
       "cell_type": "code",
@@ -960,7 +962,7 @@
       "source": [
         "`-` step4: update"
       ],
-      "id": "76cec789-efdc-4b70-a8e9-2132c960c77f"
+      "id": "f2610261-976b-4ee3-8ff9-9a1a58c927bf"
     },
     {
       "cell_type": "code",
@@ -1042,7 +1044,7 @@
       "source": [
         "## E. 코드정리"
       ],
-      "id": "b13bc69c-b8cb-428e-874f-cf9c30457667"
+      "id": "12032d5e-b25b-4bd1-968c-ffd7f9dbe77b"
     },
     {
       "cell_type": "code",
@@ -1108,7 +1110,7 @@
       "source": [
         "## F. 모형의 해석"
       ],
-      "id": "9448e985-4ae9-40c2-bcd8-2187764eeaf1"
+      "id": "e2b9dde6-fff6-4173-ade9-b20326377e6c"
     },
     {
       "cell_type": "code",
